--- a/Segunda Oficina/css/styles.css
+++ b/Segunda Oficina/css/styles.css
@@ -44,6 +44,43 @@ p + img {
     margin-top: 10px;
 }
 
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px auto;
+    margin-top: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffff;
+}
+
+caption {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+    color: #4CAF50;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 12px;
+    text-align: left;
+}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+    text-transform: uppercase;
+}
+
+tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+tr:hover {
+    background-color: #f1f1f1;
+}
+
 .menu {
     justify-content: center;
     background-color: #333;
