--- a/Segunda Oficina/css/styles.css
+++ b/Segunda Oficina/css/styles.css
@@ -50,7 +50,7 @@ table {
     margin: 20px auto;
     margin-top: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #ffff;
+    background-color: #ffffff;
 }
 
 caption {
